--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -41,7 +41,7 @@
                     <div class="collapse navbar-collapse nav-buttons" id="navbarColor03">
                         {{#if isAuth}}
                             <li><a class="nav-no-link welcome let">Welcome,</a></li>
-                            <li><a class="nav-no-link welcome">{{username}}</a></li>
+                            <li><a class="nav-no-link username">{{username}}</a></li>
                             <li><a class="nav-link" href="#/logout">// Logout</a></li>
                         {{else}}
 
