--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -68,6 +68,44 @@
 
         </div>
     </div>
+    <br>
+    <hr>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 text-center tech">
+            <h6 style="margin-top: 10px">Technologies that I work with:</h6>
+            <img src="./images/JS.png" class="tech">
+            <img src="./images/HTML.png" class="tech">
+            <img src="./images/CSS.png" class="tech">
+            <img src="./images/sass.png" class="tech">
+            <img src="./images/PS.png" class="tech">
+            <img src="./images/corel.png" class="tech">
+            <img src="./images/jQuery.png" class="tech">
+            <img src="./images/ajax.png" class="tech">
+            <img src="./images/BS.png" class="tech">
+            <img src="./images/HB.png" class="tech">
+            <img src="./images/git.png" class="tech">
+            <img src="./images/webpack.png" class="tech">
+            <img src="./images/mocha.png" class="tech">
+            <img src="./images/chai.png" class="tech">
+            <img src="./images/npm.png" class="tech">
+            <img src="./images/api.png" class="tech">
+            <img src="./images/regEx.png" class="tech">
+        </div>
+        <div class="col-2"></div>
+    </div>
+    <!--<hr>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 text-center tech">
+            <h6>Technologies I about to master in 2019:</h6>
+            <img src="./images/TS.png" class="tech">
+            <img src="./images/node.png" class="tech">
+            <img src="./images/react.png" class="tech">
+            <img src="./images/angular.png" class="tech">
+        </div>
+        <div class="col-2"></div>
+    </div>-->
 </div>
 <script>barAnimation()</script>
 {{> footer}}
