--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -1,45 +1,48 @@
 {{> header}}
 
 <div class="container array">
-    <div class="row">
-        <div class="col text-center">
-            <h2 style="margin-bottom: 20px">Contacts</h2>
-            <br>
-        </div>
-    </div>
+   <div class="row">
+      <div class="col text-center">
+         <h2 style="margin-bottom: 20px">Contacts</h2>
+         <br>
+      </div>
+   </div>
 
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-3 text-center">
-            <img class="contact-icons" src="./images/place-marker.png">
-        </div>
-        <div class="col-4 text-center">
-            <img class="contact-icons" src="./images/letter.png">
-        </div>
-        <div class="col-3 text-center">
-                <img class="contact-icons" src="./images/smartphone.png">
-        </div>
-        <div class="col-1"></div>
-    </div>
+   <div class="row">
+      <div class="col-1"></div>
+      <div class="col-3 text-center">
+         <img class="contact-icons" src="./images/letter.png">
+      </div>
+      <div class="col-4 text-center">
+         <img class="contact-icons" src="./images/place-marker.png">
+      </div>
+      <div class="col-3 text-center">
+         <img class="contact-icons" src="./images/smartphone.png">
+      </div>
+      <div class="col-1"></div>
+   </div>
 
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-3 text-center">
-            <h5>Address:</h5>
-            <p style="margin-bottom: 20px">1618 Sofia, Bulgaria</p>
-        </div>
-        <div class="col-4 text-center">
-            <h5>E-mail:</h5>
-            <img src="./images/e.png" style="width: 173px">
+   <div class="row">
+      <div class="col-1"></div>
+      <div class="col-3 text-center">
+         <h5>E-mail:</h5>
+         <img src="./images/e.png" style="width: 173px">
+      </div>
+      <div class="col-4 text-center">
+         <h5>Address:</h5>
+         <p style="margin-bottom: 20px">1618 Sofia, Bulgaria</p>
+         <img id="img">
+         <p id="description" style="margin-bottom: 0px"></p>
+         <p id="temp" style="margin-bottom: 0px"></p>
+      </div>
+      <div class="col-3 text-center">
+         <h5>Phone:</h5>
+         <p>(+359) 888 199 889</p>
+      </div>
+      <div class="col-1"></div>
+   </div>
+   <br>
 
-        </div>
-        <div class="col-3 text-center">
-            <h5>Phone:</h5>
-            <p>(+359) 888 199 889</p>
-        </div>
-        <div class="col-1"></div>
-    </div>
-    <br>
    <!--
     <div class="row">
         <div class="col text-center">
