--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -45,7 +45,7 @@
                             <li><a class="nav-link" href="#/logout">// Logout</a></li>
                         {{else}}
                             <li><a class="nav-link" href="#/login" style="margin-right: 10px">Login</a></li>
-                            <li><form method="POST" action="#/guest"><button id="guestNav">//Be Guest</button></form></li>
+                            <li><form method="POST" action="#/guest"><button id="guestNav">// Guest</button></form></li>
                         {{/if}}
                     </div>
                 </ul>
