--- a/views/array/experience/jobs.hbs
+++ b/views/array/experience/jobs.hbs
@@ -2,7 +2,7 @@
     <div class="col-4"></div>
     <div class="col-4" style="margin-bottom: 10px">
         <p class="years">{{date}}</p>
-        <img class="enlarge-B" src="{{logo}}" onclick="window.location.href='#/job-description/{{_id}}'">
+        <img id="{{_id}}" class="enlarge-B" src="{{logo}}" onclick="window.location.href='#/job-description/{{_id}}'">
     </div>
     <div class="col-4"></div>
 </div>
