--- a/styles/style.css
+++ b/styles/style.css
@@ -211,13 +211,12 @@ div#certificate-details {
     transition: transform 0.25s ease;
     background: white;
     box-shadow: 0 0 3px 2px rgba(183, 183, 183, 0.5);
-    padding: 12px;
 }
 
 .enlarge-B:hover {
     width: 170px;
+    border-radius: 2px;
     cursor: pointer;
-    padding: 12px;
     -webkit-transform: scale(1.2); /* or some other value */
     transform: scale(1.2);
     box-shadow: 0 0 3px 2px rgba(183, 183, 183, 0.5);
