--- a/views/array/education/universities.hbs
+++ b/views/array/education/universities.hbs
@@ -2,7 +2,7 @@
     <div class="col-3"></div>
     <div class="col-6" style="margin-bottom: 10px">
         <p class="years">{{date}}</p>
-        <img class="enlarge-B" src="{{logo}}" onclick="window.location.href='#/{{education}}'">
+        <img id="{{_id}}" class="enlarge-B" src="{{logo}}" onclick="window.location.href='#/{{education}}'">
     </div>
     <div class="col-3"></div>
 </div>
