--- a/views/array/contacts/contacts.hbs
+++ b/views/array/contacts/contacts.hbs
@@ -8,16 +8,16 @@
       </div>
    </div>
 
-   <div class="row">
+   <div class="row" style="margin-bottom: 30px">
       <div class="col-1"></div>
       <div class="col-3 text-center">
-         <img class="contact-icons" src="./images/letter.png">
+         <i class="fas fa-envelope-open contacts"></i>
       </div>
       <div class="col-4 text-center">
-         <img class="contact-icons" src="./images/place-marker.png">
+         <i class="fas fa-map-marked-alt contacts"></i>
       </div>
       <div class="col-3 text-center">
-         <img class="contact-icons" src="./images/smartphone.png">
+         <i class="fas fa-mobile-alt contacts"></i>
       </div>
       <div class="col-1"></div>
    </div>
