--- a/views/common/footer.hbs
+++ b/views/common/footer.hbs
@@ -1,24 +1,20 @@
 <script>goTop()</script>
 <footer id="footer" class="footer" style="padding: 0px">
-    <div class="row" style="margin: 0px">
-        <div class="col-3"></div>
-        <div class="col-3" style="text-align: right; margin-top: 11px; padding-right: 10px">© 2019 Aleks</div>
-        <div class="col-3" style="text-align: left; padding: 0px; margin-top: 2px">
+   <div class="row" style="margin: 0px">
+      <div class="col-3"></div>
+      <div class="col-3" style="text-align: right; margin-top: 11px; padding-right: 10px">© 2019 Aleks</div>
+      <div class="col-3" style="text-align: left; padding: 0px; margin-top: 2px">
 
-            <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank"
-               style="text-decoration: none">
-                <img style="width: 20px" class="icons" src="./images/linkedin-icon.png">
-            </a>
+         <a href="https://www.linkedin.com/in/aleksandar-hristov-812340122/" target="_blank">
+            <i class="fab fa-linkedin-in footer-icons"></i></a>
 
-            <a href="https://github.com/AChristoff" target="_blank" style="text-decoration: none">
-                <img style="width: 20px" class="icons" src="./images/github-icon.png">
-            </a>
+         <a href="https://github.com/AChristoff" target="_blank">
+            <i class="fab fa-github footer-icons"></i></a>
 
-            <a href="https://stackoverflow.com/users/10745932/aleksandar-hristov" target="_blank" style="text-decoration: none">
-                <img style="width: 20px" class="icons" src="./images/stackoverflow-icon.png">
-            </a>
+         <a href="https://stackoverflow.com/users/10745932/aleksandar-hristov" target="_blank">
+            <i class="fab fa-stack-overflow footer-icons"></i></a>
 
-        </div>
-        <div class="col-3" style="margin: 0px; padding: 0px"></div>
-    </div>
+      </div>
+      <div class="col-3" style="margin: 0px; padding: 0px"></div>
+   </div>
 </footer>
