--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -23,9 +23,8 @@
             <p style="color: #1A1A1A; margin-bottom: 2px; font-size: 18px">];</p>
             <br>
             <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download>
-                <button type="button" class="btn btn-primary btn-sm">Download my CV</button>
+                <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
             </a>
-
         </div>
 
 
