--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -1,16 +1,16 @@
 {{> header}}
 <div class="container array">
-    <div class="row">
-        <div class="col text-center">
-            <h2>About Me</h2>
-            <br>
-            <br>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-6" >
-            <p style="color: #1A1A1A; margin-bottom: 5px; font-size: 18px">let  skills = [</p>
-            <span>
+   <div class="row">
+      <div class="col text-center">
+         <h2>About Me</h2>
+         <br>
+         <br>
+      </div>
+   </div>
+   <div class="row">
+      <div class="col-6">
+         <p style="color: #1A1A1A; margin-bottom: 5px; font-size: 18px">let skills = [</p>
+         <span>
                "Analytical thinking and excellent attention to detail",<br>
                "Team oriented approach",<br>
                "Motivated self starter who believes in high standards as a way of work",<br>
@@ -20,91 +20,102 @@
                "Experience in a dynamic and multicultural work environment",<br>
                "Ability to prioritize and meet deadlines"<br>
             </span>
-            <p style="color: #1A1A1A; margin-bottom: 2px; font-size: 18px">];</p>
-            <br>
-            <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download>
-                <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
-            </a>
-        </div>
+         <p style="color: #1A1A1A; margin-bottom: 2px; font-size: 18px">];</p>
+         <br>
+         <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download>
+            <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
+         </a>
+      </div>
 
 
-        <div class="col-6 skills">
+      <div class="col-6 skills">
 
-            <span style="margin-bottom: 5px">JavaScript ES6</span> <span style="float: right; padding-right: 2%">Advanced</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
+         <span style="margin-bottom: 5px">JavaScript ES6</span>
+         <span style="float: right; padding-right: 2%">Advanced</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
 
-            <span style="margin-bottom: 5px">CSS3</span> <span style="float: right; padding-right: 2%">Beginner</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
+         <span style="margin-bottom: 5px">React</span> <span style="float: right; padding-right: 2%">First steps</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
 
-            <span style="margin-bottom: 5px">HTML5</span> <span style="float: right; padding-right: 2%">Intermediate</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
-            <hr style="float: left; width: 98%; margin-bottom: 30px;">
-            <span style="margin-bottom: 5px;">Photoshop</span> <span style="float: right; padding-right: 2%">Proficiency</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
+         <span style="margin-bottom: 5px">CSS3 / SASS</span> <span style="float: right; padding-right: 2%">Beginner</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
 
-            <span style="margin-bottom: 5px">CorelDRAW</span> <span style="float: right; padding-right: 2%">Intermediate</span>
-            <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
-                     aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <br>
+         <span style="margin-bottom: 5px">HTML5</span> <span style="float: right; padding-right: 2%">Intermediate</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
 
-        </div>
-    </div>
-    <br>
-    <hr>
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 text-center tech">
-            <h6 style="margin-top: 10px">Technologies that I work with:</h6>
-            <img src="./images/JS.png" class="tech">
-            <img src="./images/HTML.png" class="tech">
-            <img src="./images/CSS.png" class="tech">
-            <img src="./images/sass.png" class="tech">
-            <img src="./images/PS.png" class="tech">
-            <img src="./images/corel.png" class="tech">
-            <img src="./images/jQuery.png" class="tech">
-            <img src="./images/ajax.png" class="tech">
-            <img src="./images/BS.png" class="tech">
-            <img src="./images/HB.png" class="tech">
-            <img src="./images/git.png" class="tech">
-            <img src="./images/webpack.png" class="tech">
-            <img src="./images/mocha.png" class="tech">
-            <img src="./images/chai.png" class="tech">
-            <img src="./images/npm.png" class="tech">
-            <img src="./images/api.png" class="tech">
-            <img src="./images/regEx.png" class="tech">
-        </div>
-        <div class="col-2"></div>
-    </div>
-    <!--<hr>
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 text-center tech">
-            <h6>Technologies I about to master in 2019:</h6>
-            <img src="./images/TS.png" class="tech">
-            <img src="./images/node.png" class="tech">
-            <img src="./images/react.png" class="tech">
-            <img src="./images/angular.png" class="tech">
-        </div>
-        <div class="col-2"></div>
-    </div>-->
+         <hr style="float: left; width: 98%; margin-bottom: 30px;">
+         <span style="margin-bottom: 5px;">Photoshop</span>
+         <span style="float: right; padding-right: 2%">Proficiency</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
+
+         <span style="margin-bottom: 5px">CorelDRAW</span>
+         <span style="float: right; padding-right: 2%">Intermediate</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
+
+      </div>
+   </div>
+   <br>
+   <hr>
+   <div class="row">
+      <div class="col-2"></div>
+      <div class="col-8 text-center tech" style="margin-bottom: 50px">
+         <h6 style="margin: 20px">Technologies that I work with:</h6>
+         <img src="./images/react.png" class="tech">
+         <img src="./images/sass.png" class="tech">
+         <img src="./images/HTML.png" class="tech">
+         <img src="./images/JS.png" class="tech">
+         <img src="./images/CSS.png" class="tech">
+         <img src="./images/git.png" class="tech">
+         <img src="./images/PS.png" class="tech">
+         <img src="./images/jQuery.png" class="tech">
+         <img src="./images/ajax.png" class="tech">
+         <img src="./images/BS.png" class="tech">
+         <img src="./images/HB.png" class="tech">
+         <img src="./images/mocha.png" class="tech">
+         <img src="./images/chai.png" class="tech">
+         <img src="./images/npm.png" class="tech">
+         <img src="./images/api.png" class="tech">
+         <img src="./images/regEx.png" class="tech">
+         <img src="./images/webpack.png" class="tech">
+         <img src="./images/corel.png" class="tech">
+      </div>
+      <div class="col-2"></div>
+   </div>
+   <!--<hr>
+   <div class="row">
+       <div class="col-2"></div>
+       <div class="col-8 text-center tech">
+           <h6>Technologies I about to master in 2019:</h6>
+           <img src="./images/TS.png" class="tech">
+           <img src="./images/node.png" class="tech">
+           <img src="./images/react.png" class="tech">
+           <img src="./images/angular.png" class="tech">
+       </div>
+       <div class="col-2"></div>
+   </div>-->
 </div>
 <script>barAnimation()</script>
 {{> footer}}
