--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -9,18 +9,17 @@
    </div>
    <div class="row">
       <div class="col-6">
-         <p style="color: #1A1A1A; margin-bottom: 5px; font-size: 18px">let skills = [</p>
-         <span>
-               "Analytical thinking and excellent attention to detail",<br>
-               "Team oriented approach",<br>
-               "Motivated self starter who believes in high standards as a way of work",<br>
-               "Curious engineering-minded individuals",<br>
-               "Passionate, collaborative and results oriented",<br>
-               "Always open to acquire new knowledge and skills",<br>
-               "Experience in a dynamic and multicultural work environment",<br>
-               "Ability to prioritize and meet deadlines"<br>
-            </span>
-         <p style="color: #1A1A1A; margin-bottom: 2px; font-size: 18px">];</p>
+         <p style="color: #292929; margin-bottom: 25px; font-size: 26px; padding-left: 2px"><i class="fas fa-user-tie"></i></p>
+         <ul style="list-style: none;">
+            <li>Analytical thinking and excellent attention to detail.</li>
+            <li>Team oriented approach.</li>
+            <li>Motivated self starter who believes in high standards as a way of work.</li>
+            <li>Curious engineering-minded individuals.</li>
+            <li>Passionate, collaborative and results oriented.</li>
+            <li>Always open to acquire new knowledge and skills.</li>
+            <li>Experience in a dynamic and multicultural work environment.</li>
+            <li>Ability to prioritize and meet deadlines.</li>
+         </ul>
          <br>
          <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download>
             <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
@@ -45,7 +44,8 @@
          </div>
          <br>
 
-         <span style="margin-bottom: 5px">CSS3 / SASS</span> <span style="float: right; padding-right: 2%">Beginner</span>
+         <span style="margin-bottom: 5px">CSS3 / SASS</span>
+         <span style="float: right; padding-right: 2%">Beginner</span>
          <div class="progress" style="width: 98%; height: 10px">
             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
                  aria-valuemin="0" aria-valuemax="100"></div>
