--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -9,7 +9,7 @@
    </div>
    <div class="row">
       <div class="col-6">
-         <p style="color: #292929; margin-bottom: 25px; font-size: 26px; padding-left: 2px"><i class="fas fa-user-tie"></i></p>
+         <p style="color: #292929; margin-bottom: 20px; font-size: 27px; padding-left: 2px"><i class="fas fa-user-tie"></i></p>
          <ul style="list-style: none;">
             <li>Analytical thinking and excellent attention to detail.</li>
             <li>Team oriented approach.</li>
@@ -21,7 +21,7 @@
             <li>Ability to prioritize and meet deadlines.</li>
          </ul>
          <br>
-         <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download>
+         <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download style="padding-left: 1em">
             <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
          </a>
       </div>
