--- a/views/array/education/softuni.hbs
+++ b/views/array/education/softuni.hbs
@@ -13,7 +13,7 @@
                         {{/if}}
                 {{/each}}
             </div>
-            <button style="margin-bottom: 80px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/education'" >Back to Education</button>
+           <a href="#/education"><i class="fas fa-undo-alt"></i></a>
         </div>
     </div>
 </div>
