--- a/views/array/education/certificateDetails.hbs
+++ b/views/array/education/certificateDetails.hbs
@@ -9,10 +9,10 @@
                 <img class="cert-details" src="{{secondUrl}}">
                 {{#if ltu}}
                     <br>
-                    <button style="margin-bottom: 80px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/education'" >Back to Education</button>
+                   <a href="#/education"><i class="fas fa-undo-alt"></i></a>
                 {{else}}
                 <p class="verify" >Verification link:<br><a style="color: #1A1A1A;" href="{{description}}" target="_blank">{{description}}</a></p>
-                <button style="margin-bottom: 80px" type="button" class="btn btn-outline-primary btn-sm" onclick="window.location.href='#/softuni'" >Back to SoftUni</button>
+                   <a href="#/softuni"><i class="fas fa-undo-alt"></i></a>
                 {{/if}}
             </div>
         </div>
