--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -1,6 +1,6 @@
 {{> header}}
 <div class="container array">
-    <div class="row">
+    <div class="row jobs-list">
         <div class="col text-center">
             <h2>Experience</h2>
             <br>
