--- a/styles/style.css
+++ b/styles/style.css
@@ -236,6 +236,10 @@ p.showInfo {
     margin: 0.65em 0;
 }
 
+.jobs-list div .row:last-child {
+    margin-bottom: 150px;
+}
+
 p.job-btn {
     margin: 0.5em 0;
     padding: 0.5em 1em;
