--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -37,7 +37,7 @@
          </div>
          <br>
 
-         <span style="margin-bottom: 5px">React</span> <span style="float: right; padding-right: 2%">First steps</span>
+         <span style="margin-bottom: 5px">VueJS</span> <span style="float: right; padding-right: 2%">First steps</span>
          <div class="progress" style="width: 98%; height: 10px">
             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
                  aria-valuemin="0" aria-valuemax="100"></div>
@@ -83,7 +83,7 @@
       <div class="col-2"></div>
       <div class="col-8 text-center tech" style="margin-bottom: 50px">
          <h6 style="margin: 20px">Technologies that I work with:</h6>
-         <img src="./images/react.png" class="tech">
+         <img src="./images/vue-js.png" class="tech">
          <img src="./images/sass.png" class="tech">
          <img src="./images/HTML.png" class="tech">
          <img src="./images/JS.png" class="tech">
