--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -21,7 +21,7 @@
             <li>Ability to prioritize and meet deadlines.</li>
          </ul>
          <br>
-         <a href="./images/CV-Aleksandar-H-(EN)dev.pdf" download style="padding-left: 1em">
+         <a href="" download style="padding-left: 1em; display: none">
             <button id="download"><i class="fas fa-arrow-circle-down"></i> Download my CV</button>
          </a>
       </div>
