--- a/views/common/header.hbs
+++ b/views/common/header.hbs
@@ -6,7 +6,7 @@
                <li>
                         <span class="navbar-brand">
                            <a id="aleks" href="#">
-                              {aleks}
+                              {Aleksov}
                            </a>
                             <button id="navBtn" class="navbar-toggler" type="button" data-toggle="collapse"
                                     data-target="#navbarColor03"
