--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -29,6 +29,14 @@
 
       <div class="col-6 skills">
 
+          <span style="margin-bottom: 5px">VueJS</span>
+          <span style="float: right; padding-right: 2%">Beginner</span>
+          <div class="progress" style="width: 98%; height: 10px">
+              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                   aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <br>
+
          <span style="margin-bottom: 5px">JavaScript ES6</span>
          <span style="float: right; padding-right: 2%">Advanced</span>
          <div class="progress" style="width: 98%; height: 10px">
@@ -37,40 +45,34 @@
          </div>
          <br>
 
-         <span style="margin-bottom: 5px">VueJS</span> <span style="float: right; padding-right: 2%">First steps</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <br>
+          <span style="margin-bottom: 5px">SASS</span>
+          <span style="float: right; padding-right: 2%">Beginner</span>
+          <div class="progress" style="width: 98%; height: 10px">
+              <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
+                   aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <br>
 
-         <span style="margin-bottom: 5px">CSS3 / SASS</span>
-         <span style="float: right; padding-right: 2%">Beginner</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-         <br>
-
-         <span style="margin-bottom: 5px">HTML5</span> <span style="float: right; padding-right: 2%">Intermediate</span>
-         <div class="progress" style="width: 98%; height: 10px">
-            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
-                 aria-valuemin="0" aria-valuemax="100"></div>
-         </div>
-
-         <hr style="float: left; width: 98%; margin-bottom: 30px;">
-         <span style="margin-bottom: 5px;">Photoshop</span>
+         <span style="margin-bottom: 5px">CSS3 / HTML5</span>
          <span style="float: right; padding-right: 2%">Proficiency</span>
          <div class="progress" style="width: 98%; height: 10px">
             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
                  aria-valuemin="0" aria-valuemax="100"></div>
          </div>
-         <br>
 
-         <span style="margin-bottom: 5px">CorelDRAW</span>
+         <hr style="float: left; width: 98%; margin-bottom: 30px;">
+         <span style="margin-bottom: 5px;">Git</span>
          <span style="float: right; padding-right: 2%">Intermediate</span>
          <div class="progress" style="width: 98%; height: 10px">
             <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
+                 aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
+         <br>
+
+         <span style="margin-bottom: 5px">Bootstrap</span>
+         <span style="float: right; padding-right: 2%">Advanced</span>
+         <div class="progress" style="width: 98%; height: 10px">
+            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
                  aria-valuemin="0" aria-valuemax="100"></div>
          </div>
          <br>
